remoção de sitemap antigo e arquivo para queue

--- a/queue.yml
+++ b/queue.yml
@@ -1,5 +1,5 @@
 apps:
-       - name: ArquivoCamaraQueue
+       - name: ArqueologiaQueue
          script: artisan
          exec_mode: fork
          interpreter: php
