--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,12 +2,11 @@
     "/js/app.js": "/js/app.js",
     "/js/insertDocument.js": "/js/insertDocument.js",
     "/css/app.css": "/css/app.css",
-    "/css/navbar.css": "/css/navbar.css",
+    "/css/table.css": "/css/table.css",
     "/css/home.css": "/css/home.css",
     "/css/documentDetail.css": "/css/documentDetail.css",
     "/css/arquivoVirtualHome.css": "/css/arquivoVirtualHome.css",
     "/css/auth.css": "/css/auth.css",
     "/css/history.css": "/css/history.css",
-    "/css/variables.css": "/css/variables.css",
-    "/css/table.css": "/css/table.css"
+    "/css/variables.css": "/css/variables.css"
 }
