--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,12 +1,10 @@
 {
     "/js/app.js": "/js/app.js",
-    "/js/insertDocument.js": "/js/insertDocument.js",
     "/css/app.css": "/css/app.css",
+    "/css/variables.css": "/css/variables.css",
     "/css/table.css": "/css/table.css",
     "/css/home.css": "/css/home.css",
     "/css/documentDetail.css": "/css/documentDetail.css",
-    "/css/arquivoVirtualHome.css": "/css/arquivoVirtualHome.css",
     "/css/auth.css": "/css/auth.css",
-    "/css/history.css": "/css/history.css",
-    "/css/variables.css": "/css/variables.css"
+    "/css/history.css": "/css/history.css"
 }
