--- a/public/web.config
+++ b/public/web.config
@@ -30,5 +30,10 @@
         <staticContent>
             <mimeMap fileExtension=".webp" mimeType="image/webp" />
         </staticContent>
+        <security>
+            <requestFiltering>
+                <requestLimits maxAllowedContentLength="1073741824" /> 
+            </requestFiltering>
+        </security>
     </system.webServer>
 </configuration>
